--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     compileSdk 31
-
+    compileOptions.incremental = false
     defaultConfig {
         applicationId "com.annhienktuit.cleanarchitectureplayer"
         minSdk 23
@@ -38,6 +38,11 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-core:2.16.1'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.16.1'
     implementation 'com.google.android.exoplayer:extension-mediasession:2.16.1'
+
+    implementation 'com.google.dagger:dagger-android:2.41'
+    implementation 'com.google.dagger:dagger-android-support:2.41'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.41'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.41'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
