--- a/data/build.gradle
+++ b/data/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':domain')
+    api project(path: ':domain')
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
