--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.16.1'
     implementation 'com.google.android.exoplayer:extension-mediasession:2.16.1'
 
-    implementation 'com.google.dagger:dagger-android:2.41'
-    implementation 'com.google.dagger:dagger-android-support:2.41'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.41'
+    implementation 'com.google.dagger:dagger:2.41'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.41'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
