--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -28,6 +28,9 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.google.dagger:dagger:2.41'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.41'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     testImplementation 'junit:junit:4.+'
