--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -29,6 +29,10 @@ android {
 
 dependencies {
 
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
     implementation 'com.google.dagger:dagger:2.41'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.41'
     implementation 'androidx.appcompat:appcompat:1.4.1'
