--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.annhienktuit.cleanarchitectureplayer" >
+    package="com.annhienktuit.cleanarchitectureplayer">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -9,18 +11,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CleanArchitecturePlayer" >
+        android:theme="@style/Theme.CleanArchitecturePlayer">
         <activity
-            android:name=".ui.activities.PlayerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.activities.SongListActivity"
-            android:exported="true" >
+            android:name=".ui.activities.SearchActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".ui.activities.PlayerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activities.SongListActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
